--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.12
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.7.0
   firebase_core: ^3.15.2
