--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
